PracticaFinal/k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-backend-svc
spec:
  selector:
    app: web
    tier: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP

apiVersion: v1
kind: Service
metadata:
  name: web-frontend-svc
  namespace: default
spec:
  selector:
    app: web
    tier: frontend
  type: NodePort
  ports:
    - port: 80        
      targetPort: 80 
      nodePort: 30080 
---
